# CSC-474-Base-Code

./: CMakeLists.txt  README.md
ext/fftw/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
ext/glad/src/: glad.c
resources/: phong.frag  phong.vert  test.fbx
src/: Camera.cpp  Camera.h  GLSL.cpp  GLSL.h  Program.cpp  Program.h  Shape.cpp  Shape.h  WindowManager.cpp  WindowManager.h  bone.h  fbx_convert.cpp  main.cpp
